syntax = "proto3";

package order.v1alpha;

message Order {
  int32 id = 1;
  int32 userId = 2;
  repeated int32 productId = 3;
  repeated int32 quantity = 4;
}

service OrderService {
  rpc FindOrder (FindOrderRequest) returns (FindOrderResponse);
  rpc CreateOrder (CreateOrderRequest) returns (CreateOrderResponse);
  rpc UpdateOrder (UpdateOrderRequest) returns (UpdateOrderResponse);
  rpc DeleteOrder (DeleteOrderRequest) returns (DeleteOrderResponse);
}

message FindOrderRequest {
  int32 id = 1;
  int32 userId = 2;
}

message FindOrderResponse {
  repeated Order orders = 1;
  ResponseStatus status = 2;
}

message CreateOrderRequest {
  int32 userId = 1;
  repeated int32 productId = 2;
  repeated int32 quantity = 3;
}

message CreateOrderResponse {
  Order order = 1;
  ResponseStatus status = 2;
}

message UpdateOrderRequest {
  int32 id = 1;
  Order order = 2;
}

message UpdateOrderResponse {
  Order order = 1;
  ResponseStatus status = 2;
}

message DeleteOrderRequest {
  int32 id = 1;
}

message DeleteOrderResponse {
  Order order = 1;
  ResponseStatus status = 2;
}

message ResponseStatus {
  int32 code = 1;
  string message = 2;
}

message Empty {}